Code refactoring: Outsourced reused code for symbol correction in unicode string to WordExtractor::CorrectSymbols

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,7 @@
 				"-Wall",
 				// "--verbose",
 				
-				"${file}",
+				"${workspaceFolder}\\src\\main.cpp",
 				"${workspaceFolder}\\src\\WordExtractor.cpp",
 
 				"-LC:\\CPP\\GnuWin32\\lib\\",
