Text extraction: casting to lower case, removing undesired symbols

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,7 @@
 				
 				"${workspaceFolder}\\src\\main.cpp",
 				"${workspaceFolder}\\src\\WordExtractor.cpp",
+				"${workspaceFolder}\\src\\WindowsWcharSupport.cpp",
 
 				"-LC:\\CPP\\GnuWin32\\lib\\",
 				"-lpodofo",
